center title, add link to video

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ img {
 #headline {
     max-width: 550px;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
     background-color: #f7f5f0;
 }
 
