issue fixed, linked image properly

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ li {
 }
 
 #tribute-info {
-    background-image: url("/images/picture4.jpg");
+    background-image: url("images/picture4.jpg");
     background-repeat: no-repeat;
     background-size: cover; 
     border: 2px solid black;
